<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.syncroweb.biocomp20.MainMenu">

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:textSize="28dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnDatesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:height="100dp"
            android:text="@string/datelist"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/btnInfos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:height="100dp"
            android:text="@string/infos"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/btnOtherApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:height="100dp"
            android:text="@string/other_apps"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="WELCOME TO BIOCOMP"
        android:id="@+id/txtTitleMenu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_biocomp"
        android:id="@+id/txtIntro"
        android:textSize="18dp"
        android:layout_below="@+id/txtTitleMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />


</RelativeLayout>
