<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.syncroweb.android.bio.CalculateLoadOrNew"
    android:background="#ffffff">

    <Button
        android:layout_width="wrap_content"
        android:text="@string/load_date"
        style="@style/AppTheme.Button"
        android:id="@+id/btnLoadDate"
        android:gravity="center"
        android:onClick="startRegisteredDateList"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        style="@style/AppTheme.Button"
        android:text="@string/select_a_new_date"
        android:id="@+id/btnNewDate"
        android:gravity="center|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Load a profile from your list of dates, or create a new profile."
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adsLoN"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/prova_banner"/>

</RelativeLayout>
