<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/share"
    tools:showIn="it.syncroweb.android.bio.Calculate"
    android:background="#ffffff">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNameOne"
        android:textSize="18dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/calculateDescr"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnFirstPhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNameTwo"
        android:textSize="18dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/calculateDescr"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/btnSecondPhoto" />


    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/btnFirstPhoto"
        android:background="@drawable/girl"
        android:layout_below="@+id/lblNameOne"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:onClick="chooseAvatarOne"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/btnSecondPhoto"
        android:background="@drawable/man"
        android:layout_below="@+id/lblNameTwo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:onClick="chooseAvatarTwo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date"
        android:id="@+id/lblDateOne"
        android:background="#ffffff"
        android:tag="dateOne"
        android:textSize="20dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnFirstPhoto" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date"
        android:id="@+id/lblDateTwo"
        android:background="#ffffff"
        android:tag="dateTwo"
        android:textSize="20dp"
        android:layout_marginTop="8dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/btnSecondPhoto"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/btnSecondPhoto" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblDateTwo"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotional"
            android:id="@+id/lblEmotional"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intellectual"
            android:textSize="18sp"
            android:id="@+id/lblIntellectual"
            android:layout_marginTop="2dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physical"
            android:textSize="18sp"
            android:id="@+id/lblPhysical"
            android:layout_marginTop="2dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lblDateTwo"
        android:layout_below="@+id/lblDateTwo"
        android:layout_marginTop="44dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblCalculatedEm"
            android:textSize="18dp"
            android:text="0%"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblCalculatedInt"
            android:textSize="18dp"
            android:gravity="center"
            android:text="0%"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblCalculatedPh"
            android:textSize="18dp"
            android:gravity="center"
            android:text="0%"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="18dp"/>

</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>